added map component with places reducer

--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,5 @@
 <head>
   <title>Briefing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyFR3sB7hplyvX8g0Ax7A8yTG0j-uqSJ4"></script>
 </head>
